UPdated index.html with images

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     alt="Hello world from space"
     style= "width:100%; max-width:960px"></div>
 <p>thiss my favourite pic</p>
- <p> A new line in this floder</p>
+ <p> A new line in this floder?</p>
 </body>
 </head>
 </html>
