updated index.html with emergency fix

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     style= "width:100%; max-width:960px"></div>
 <p>this my favourite pic</p>
  <p> A new line in this floder</p>
+ <p> this line is show to here emergency error</p>
 </body>
 </head>
 </html>
