--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     style= "width:100%; max-width:960px"></div>
 <p>thiss my favourite pic</p>
  <p> A new line in this floder?</p>
+ <div><img src=https://www.codelikethewind.org/content/images/size/w1200/2022/05/hello_world.png</div>
+ alt ="hello world"  style="width:100%; max-width:640px">  
+    </div>
 </body>
 </head>
 </html>
