--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <img src="C:\Users\DELL\gill\image.png" alt="Hello world">
     style= "width:100%; max-width:960px"></div>
 </div>
+    <p>this changes only for our folder.</p>
 
 </body>
 </head>
